--- a/index.html
+++ b/index.html
@@ -45,7 +45,59 @@
                     </div>
                 </div>
             </div>
-            
+        </section>
+        <section class="main_about">
+            <div class="main_about_left">
+                <div class="main_about_textbox">
+                    <p class="main_about_heading">
+                        About Us
+                    </p>
+                    <p class="main_about_description">
+                        Xin Pharmacy is a small medical agency, that serves no actual
+                        purpose but to be shiny and show everyone the superiority
+                        of this person named Xin. He is a total douchebag that wants
+                        to die actually but still refuses to. I do not know why however
+                        he says it multiple times a day, usually to himself.
+                    </p>
+                </div>
+            </div>
+            <div class="main_about_woman">
+                <img src="img/woman.png" alt="">
+            </div>
+        </section>
+        <section class="main_offer">
+            <div class="main_offer_container">
+                <div class="main_offer_name">
+                    <p>What do we offer</p>
+                </div>
+                <div class="main_offer_slider">
+                    <div class="main_offer_arrow">
+                        <div class="main_offer_arrow_itself">
+                            <img src="img/arrow.png" alt="">
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                    <div class="main_offer_slider_container">
+                        <div class="main_offer_slider_pill">
+                            <img src="" alt="">
+                            <div class="main_offer_slider_pill_border">
+
+                            </div>
+                            <div class="main_offer_slider_pill_text">
+                                <p>
+                                    Short description of the thing or whatever i dont know.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="main_offer_arrow">
+                        <div class="main_offer_arrow_itself">
+                            <img src="" alt="">
+                            <img src="img/arrow.png" alt="">
+                        </div>
+                    </div> 
+                </div>
+            </div>
         </section>
     </main>
     <script src="index.js"></script>
