--- a/index.html
+++ b/index.html
@@ -72,27 +72,92 @@
                 </div>
                 <div class="main_offer_slider">
                     <div class="main_offer_arrow">
-                        <div class="main_offer_arrow_itself">
+                        <div class="main_offer_arrow_itself" id="next">
                             <img src="img/arrow.png" alt="">
-                            <img src="" alt="">
                         </div>
                     </div>
-                    <div class="main_offer_slider_container">
-                        <div class="main_offer_slider_pill">
-                            <img src="" alt="">
-                            <div class="main_offer_slider_pill_border">
+                    <div class="main_offer_slider_absolute">
+                        <div class="main_offer_slider_container" id="pillDispenser">
+                            <div class="main_offer_slider_pill_container" id="pill_3">
+                                <div class="main_offer_slider_pill">
+                                    <div class="main_offer_slider_pill_top" id="pill_3_img">
 
+                                    </div>
+                                    <div class="main_offer_slider_pill_border">
+
+                                    </div>
+                                    <div class="main_offer_slider_pill_text">
+                                        <p>
+                                            Short description of the thing or whatever i dont know.
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="main_offer_slider_pill_text">
-                                <p>
-                                    Short description of the thing or whatever i dont know.
-                                </p>
+                            <div class="main_offer_slider_pill_container" id="pill_1">
+                                <div class="main_offer_slider_pill">
+                                    <div class="main_offer_slider_pill_top" id="pill_1_img">
+
+                                    </div>
+                                    <div class="main_offer_slider_pill_border">
+
+                                    </div>
+                                    <div class="main_offer_slider_pill_text">
+                                        <p>
+                                            Short description of the thing or whatever i dont know.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="main_offer_slider_pill_container" id="pill_2">
+                                <div class="main_offer_slider_pill">
+                                    <div class="main_offer_slider_pill_top" id="pill_2_img">
+
+                                    </div>
+                                    <div class="main_offer_slider_pill_border">
+
+                                    </div>
+                                    <div class="main_offer_slider_pill_text">
+                                        <p>
+                                            Short description of the thing or whatever i dont know.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="main_offer_slider_pill_container" id="pill_4">
+                                <div class="main_offer_slider_pill">
+                                    <div class="main_offer_slider_pill_top" id="pill_3_img">
+
+                                    </div>
+                                    <div class="main_offer_slider_pill_border">
+
+                                    </div>
+                                    <div class="main_offer_slider_pill_text">
+                                        <p>
+                                            Short description of the thing or whatever i dont know.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="main_offer_slider_pill_container" id="pill_5">
+                                <div class="main_offer_slider_pill">
+                                    <div class="main_offer_slider_pill_top" id="pill_1_img">
+
+                                    </div>
+                                    <div class="main_offer_slider_pill_border">
+
+                                    </div>
+                                    <div class="main_offer_slider_pill_text">
+                                        <p>
+                                            Short description of the thing or whatever i dont know.
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    
                     <div class="main_offer_arrow">
-                        <div class="main_offer_arrow_itself">
-                            <img src="" alt="">
+                        <div class="main_offer_arrow_itself" id="prev">
                             <img src="img/arrow.png" alt="">
                         </div>
                     </div> 
@@ -100,6 +165,9 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>All rights belong to Xin</p>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
