--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>Karaganda</p>
                 <img src="img/location.png" alt="">
             </div>
-            <div class="header_burger">
+            <div class="header_burger" id="burgerOpen">
                 <div class="burger_line"></div>
                 <div class="burger_line"></div>
                 <div class="burger_line"></div>
@@ -76,25 +76,8 @@
                             <img src="img/arrow.png" alt="">
                         </div>
                     </div>
-                    <div class="main_offer_slider_absolute">
                         <div class="main_offer_slider_container" id="pillDispenser">
-                            <div class="main_offer_slider_pill_container" id="pill_3">
-                                <div class="main_offer_slider_pill">
-                                    <div class="main_offer_slider_pill_top" id="pill_3_img">
-
-                                    </div>
-                                    <div class="main_offer_slider_pill_border">
-
-                                    </div>
-                                    <div class="main_offer_slider_pill_text">
-                                        <p>
-                                            Short description of the thing or whatever i dont know.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="main_offer_slider_pill_container" id="pill_1">
-                                <div class="main_offer_slider_pill">
+                                <div class="main_offer_slider_pill" id="pill_1">
                                     <div class="main_offer_slider_pill_top" id="pill_1_img">
 
                                     </div>
@@ -107,9 +90,7 @@
                                         </p>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="main_offer_slider_pill_container" id="pill_2">
-                                <div class="main_offer_slider_pill">
+                                <div class="main_offer_slider_pill" id="pill_2">
                                     <div class="main_offer_slider_pill_top" id="pill_2_img">
 
                                     </div>
@@ -122,9 +103,7 @@
                                         </p>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="main_offer_slider_pill_container" id="pill_4">
-                                <div class="main_offer_slider_pill">
+                                <div class="main_offer_slider_pill" id="pill_3">
                                     <div class="main_offer_slider_pill_top" id="pill_3_img">
 
                                     </div>
@@ -137,30 +116,74 @@
                                         </p>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="main_offer_slider_pill_container" id="pill_5">
-                                <div class="main_offer_slider_pill">
-                                    <div class="main_offer_slider_pill_top" id="pill_1_img">
-
-                                    </div>
-                                    <div class="main_offer_slider_pill_border">
-
-                                    </div>
-                                    <div class="main_offer_slider_pill_text">
-                                        <p>
-                                            Short description of the thing or whatever i dont know.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
-                    </div>
-                    
                     <div class="main_offer_arrow">
                         <div class="main_offer_arrow_itself" id="prev">
                             <img src="img/arrow.png" alt="">
                         </div>
                     </div> 
+                </div>
+            </div>
+        </section>
+        <section class="main_appoint">
+            <div class="main_appoint_blur">
+                <div class="main_appoint_container">
+                    <div class="main_appoint_text_up">
+                        <p>If you want to make an appointment</p>
+                    </div>
+                    <div class="main_appoint_middle">
+                        <div class="main_appoint_map_container">
+                            <div class="main_appoint_map">
+                                <img src="img/header_img.png" alt=""> 
+                            </div>
+                        </div>
+                        <div class="main_appoint_info_container">
+                            <div class="main_appoint_info_location">
+                                <p>Pharmacy Rd, Speke, Liverpool, UK</p>
+                            </div>
+                            <div class="main_appoint_phone_and_mail">
+                                <p class="main_appoint_phone">+44 123 456</p>
+                                <p class="main_appoint_mail">XPharmacy@mail</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="main_appoint_text_down">
+                        <p>We know where to find you.</p>
+                    </div>
+                </div>
+            </div>
+            
+        </section>
+        <section class="main_burger" id="burgerMenu">
+            <div class="main_burger_list" id="burgerItself">
+                <div class="main_burger_list_button_container">
+                    <button type="button" class="main_burger_list_button" id="burgerClose">
+                        <div class="main_burger_list_button_one">
+
+                        </div>
+                        <div class="main_burger_list_button_two">
+
+                        </div>
+                    </button>
+                </div>
+                <div class="main_burger_list_topics">
+                    <ul>
+                        <ul>
+                            <a href="">Main</a>
+                        </ul>
+                        <ul>
+                            <a href="">Goods</a>
+                        </ul>
+                        <ul>
+                            <a href="">Information Board</a>
+                        </ul>
+                        <ul>
+                            <a href="">Social Links</a>
+                        </ul>
+                        <ul>
+                            <a href="">Credits</a>
+                        </ul>
+                    </ul>
                 </div>
             </div>
         </section>
